...
                } else {
                  Navigator.pop(context);
                }
              },
            ),
            ListTile(
              key: const Key('Articulos'),
              title: Row(
                children: [
                  Image.asset("lib/assets/images/Articles_icon.png"),
                  const SizedBox(
                    width: 14,
                  ),
                  const Text('Artículos',
                      style: TextStyle(color: Colors.white, fontSize: 33)),
                ],
              ),
              onTap: () async {
                await getCategories();
                if (listCategories.isNotEmpty) {
...
