...
                  deleteActivated = !deleteActivated;
                });
              },
              child: const Text('Cancelar'),
            ),
            TextButton(
              key: const Key('confirm'),
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: Text(
                'Eliminar',
                style: TextStyle(color: red),
...
      for (MyObject selectedObject in _selectedObjects) {
        if (_selectedObjects.isNotEmpty) {
          await eliminarVariosObjetos(
              context, selectedObject.imageUrl, widget.categoria);
        }
      }
      showSnackbar(context, "Los artículos han sido eliminados", green);
      Navigator.pop(context);
    } catch (e) {
      showSnackbar(context, "Los artículos no han sido eliminados", red);
      Navigator.pop(context);
    }
    setState(() {
...
                      height: 20,
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.spaceBetween,
                      children: [
                        IconButton(
                          key: const Key('DeleteIcon'),
                          onPressed: () {
                            if (deleteActivated) {
                              setState(() {
                                deleteActivated = !deleteActivated;
                              });
                              if (_selectedObjects.isNotEmpty) {
...
