...
          if (categoryDoc['Name'] == category) {
            // Update the "Description" field to be blank ("")
            await categoryDoc.reference.update({'Description': ''});

            // You can show a success message here if needed
            showSnackbar(context,
                "Descripción de la categoría eliminada exitosamente", green);

            // Exit the function after successfully clearing the category description
            return;
          }
        }
      }
...
