...
        agregarObjeto(
            context,
            'images/$randomFileName.jpg',
            name,
            descripcion,
            category,
            "Imagen modificada correctamente",
            "No se pudo modificar la imagen");

        // Close the progress dialog
        Navigator.of(context).pop();
      });
    } catch (e) {
...
                    height: 25,
                  ),
                  Center(
                    child: Column(
                      children: [
                        GestureDetector(
                          key: const Key('Image'),
                          onTap: () {
                            setState(() {
                              agregar();
                            });
                          },
                          child: Stack(
...
